# benchmarks

./: .gitignore  README.md  benchmark-bench.js  benchmark-compare.js  benchmark.js  package.json
benchmarks/: HotChocolateServer.js  apollo-as-integrations-fastify+graphql-jit+type-graphql.js  apollo-as-integrations-fastify+graphql-jit.js  apollo-as-integrations-fastify.js  apollo-as-koa-integrations+graphql-jit+type-graphql.js  apollo-opentracing.js  apollo-schema+async.js  apollo-server-express-tracing.js  apollo-server-express.js  bun-yoga-jit.js  bun-yoga.js  express-REST.js  express-gql.js  fastify-express-graphql-jit.js  fastify-express-graphql-typed-jit.js  fastify-express-grapql-typed.js  graphql-api-koa+graphql-jit.js  graphql-api-koa.js  graphql-http+async-middleware.js  graphql-http+async.js  graphql-http+graphql-compose.js  graphql-http+graphql-jit+graphql-compose.js  graphql-http+graphql-jit+type-graphql.js  graphql-http+graphql-jit.js  graphql-http+middleware.js  graphql-http+type-graphql.js  graphql-http-dd-trace-less.js  graphql-http-dd-trace-no-plugin.js  graphql-http-dd-trace.js  graphql-http.js  graphyne-server+express.js  graphyne-server.js  mercurius+graphql-compose-jit.js  mercurius+graphql-compose.js  mercurius+graphql-jit+otel-instrumentation.js  mercurius+graphql-jit+type-graphql.js  mercurius+graphql-jit.js  mercurius.js  yoga-graphql.js
benchmarks/HotChocolateServer/: HotChocolateServer.csproj  Program.cs  (+2 more)
lib/: autocannon.js  choices.js  data.js
other-benchmarks/rust-gql/: Cargo.toml
other-benchmarks/rust-gql/src/: main.rs  schema.rs
(+20 files in other folders)
