[package]
name = "rust-gql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", default-features = false }
async-graphql = { version = "7.0.3", default-features = false, features = [
    "graphiql",
] }
async-graphql-axum = "7.0.3"
md5 = "0.7.0"
uuid = { version = "1.8.0", features = ["v4"] }
fake = "2.9.2"
rand = "0.8.5"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }
